Small fix for skew overflow. But not perfect.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -94,6 +94,7 @@ a.home {
 
 .skew-y {
     transform: skewY(-11deg);
+    overflow: hidden;
 }
 .skew-y > * {
     transform: skewY(5.5deg);
